# cpp-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: BuildAPI.cmake  BuildRepoHelpers.cmake  QMBuildRepoHelpers.cmake
src/: CMakeLists.txt  conf.cmake
src/app/: CMakeLists.txt  app.icns
src/include/binop/Core/: Global.h
src/include/binop/Core/Operator/: Operator.h  OperatorPlugin.h
src/include/binop/Core/Plugin/: Plugin.h  PluginFactory.h
src/include/binop/Gui/: Global.h
src/libs/: CMakeLists.txt
src/libs/Core/: CMakeLists.txt
src/libs/Core/Plugin/: Plugin.cpp  PluginFactory.cpp
src/libs/Gui/: CMakeLists.txt  Sub.cpp
src/libs/WinMain/: CMakeLists.txt  main.cpp
src/plugins/: CMakeLists.txt
src/plugins/operators/: CMakeLists.txt
src/plugins/operators/add/: AddOperator.cpp  AddOperator.h  CMakeLists.txt  main.cpp
src/plugins/operators/sub/: CMakeLists.txt  SubOperator.cpp  SubOperator.h  main.cpp
src/share/: CMakeLists.txt
src/share/data/: binopConfig.json
src/tests/auto/: CMakeLists.txt
src/tools/Console/: CMakeLists.txt
